[package]
name = "sender"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.10.2", features = ["fuzzy-matcher", "fuzzy-select"] }
tokio = { version = "1.21.0", features = ["full"] }
self_update = { version = "0.31.0", features = ["archive-tar", "archive-zip"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "s"
lto= true
codegen-units = 1
